--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
 								<div class="nav-drop__group">
 									<strong class="nav-drop__title">Age:</strong>
 									<ul class="nav-drop__list">
-										<li><a href="#" class="button" data-filter=".tag-younger">2-3 years</a></li>
-										<li><a href="#" class="button" data-filter=".tag-middle">4-5 years</a></li>
-										<li><a href="#" class="button" data-filter=".tag-senior">6+ years</a></li>
+										<li><a href="#" data-filter=".tag-younger">2-3 years</a></li>
+										<li><a href="#" data-filter=".tag-middle">4-5 years</a></li>
+										<li><a href="#" data-filter=".tag-senior">6+ years</a></li>
 									</ul>
 								</div>
 							</div>
