--- a/products.html
+++ b/products.html
@@ -287,7 +287,7 @@
 	<div class="filters-button filters-counter">
 		<div class="filters-counter-js"></div>
 	</div>
-	<a href="#" class="btn-default show-filter-items show-filter-items-js">Show items</a>
+	<a href="#" class="btn-default show-filters-items show-filter-items-js">Show items</a>
 	<a href="#" class="filters-button clear-filters disabled"><i class="depict-clear"></i><span>Clear filter</span></a>
 </div>
 <!--FILTERS end-->
