--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
 	<meta charset="UTF-8">
-	<title>AZToys - News</title>
+	<title>AZToys - About Us</title>
 	<!--Mobile optimized-->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="apple-mobile-web-app-capable" content="yes">
@@ -134,9 +134,9 @@
 							<a href="#" class="btn-close close-nav-drop-js">Close</a>
 						</div>
 					</li>
-					<li><a href="about.html"><span>About Us</span></a></li>
+					<li class="active"><a href="javascript:void(0)"><span>About Us</span></a></li>
 					<li><a href="apps.html"><span>Apps</span></a></li>
-					<li class="active"><a href="javascript:void(0)"><span>News</span></a></li>
+					<li><a href="news.html"><span>News</span></a></li>
 					<li><a href="contacts.html"><span>Contacts</span></a></li>
 				</ul>
 			</nav>
@@ -196,7 +196,7 @@
 	<div class="main">
 		<!--CONTENT-->
 		<div class="content user-content layout">
-			<div class="section-title"><h2>News</h2></div>
+			<div class="section-title"><h1>About Us</h1></div>
 			<!--news-->
 			<div class="news">
 				<article class="news__item max-wrap">
