--- a/all-pages.html
+++ b/all-pages.html
@@ -224,6 +224,9 @@
 					<li><a href="contacts.html" target="_blank">
 						<span>Contacts</span>
 					</a></li>
+					<li><a href="about.html" target="_blank">
+						<span>About</span>
+					</a></li>
 				</ol>
 			</div>
 		</div>
