--- a/all-pages.html
+++ b/all-pages.html
@@ -227,6 +227,9 @@
 					<li><a href="about.html" target="_blank">
 						<span>About</span>
 					</a></li>
+					<li><a href="about-wide.html" target="_blank">
+						<span>About (wide content)</span>
+					</a></li>
 				</ol>
 			</div>
 		</div>
