--- a/products.html
+++ b/products.html
@@ -633,6 +633,7 @@
 					<div class="product-card__content">
 						<div class="product-card__widget">
 							<div class="product-card__description text-slide-js">Welcome to a noisy farm! The cheerful farmer has so many different animals: a fluffy dog and a colourful rooster, a fast horse and a cute pig. It is so great to press the pictures with animals and listen to their voices! Pressing the mode buttons the little ones will listen to curious facts and play fun games. Listen to a merry tune and add animal voices to the mix! Это будет текстовое поле 1, отдельное заполняется для каждой игрушки ОК</div>
+							<!--<div class="product-card__description text-slide-js">Welcome to a noisy farm!</div>-->
 						</div>
 						<div class="product-card__widget">
 							<strong class="product-card__subtitle">Information:</strong>
