--- a/index.html
+++ b/index.html
@@ -218,7 +218,8 @@
 							<a href="#" class="products__inner">
 								<div class="products__img"><div class="products__figure"><img src="img/img-products-01.jpg" alt="image description" /></div></div>
 								<div class="products__content">
-									<h3 class="products__title">Baby Player Fire Kids Edition Tablet</h3>
+									<h3 class="products__title">Baby Player</h3>
+									<h4 class="products__subtitle">Fire Kids Edition Tablet</h4>
 									<dl class="products__param">
 										<dt>Category:</dt> <dd>Educational Toys, Sound and Music Toys, Tablets with Touch Screen Pages</dd>
 										<dt>Skills:</dt> <dd>Cognitive skills, Hand-eye coordination, Sensory abilities, Reading skills</dd>
