--- a/products.html
+++ b/products.html
@@ -622,47 +622,12 @@
 			<div class="max-wrap">
 				<!--product card-->
 				<div class="product-card">
-					<strong class="product-card__title">KIDS’ PAD - Fun on the Farm</strong>
+					<div class="product-card__title"><strong>KIDS’ PAD</strong> <span>Fun on the Farm</span></div>
 					<div class="product-card__visual">
 						<div class="product-card__gallery gallery-js">
 							<img src="img/img-products-lg-01.jpg">
 							<img src="img/img-products-lg-02.jpg">
 							<img src="img/img-products-lg-03.jpg">
-						</div>
-					</div>
-					<div class="product-card__content">
-						<div class="product-card__widget">
-							<div class="product-card__description text-slide-js">Welcome to a noisy farm! The cheerful farmer has so many different animals: a fluffy dog and a colourful rooster, a fast horse and a cute pig. It is so great to press the pictures with animals and listen to their voices! Pressing the mode buttons the little ones will listen to curious facts and play fun games. Listen to a merry tune and add animal voices to the mix! Это будет текстовое поле 1, отдельное заполняется для каждой игрушки ОК</div>
-							<!--<div class="product-card__description text-slide-js">Welcome to a noisy farm!</div>-->
-						</div>
-						<div class="product-card__widget">
-							<strong class="product-card__subtitle">Information:</strong>
-							<ul class="skills-list">
-								<li><span>10 animal voices</span></li>
-								<li><span>10 curious facts</span></li>
-								<li><span>20 fun questions</span></li>
-								<li><span>Amusing tune: the animals sing along!</span></li>
-							</ul>
-						</div>
-						<div class="product-card__widget">
-							<strong class="product-card__subtitle">Categories:</strong>
-							<dl class="product-card__dl">
-								<dt>Category:</dt>
-								<dd>
-									<ul>
-										<li>Educational Toy</li>
-										<li>Toy Table</li>
-										<li>Entertaining Musical Toy</li>
-									</ul>
-								</dd>
-								<dt>Age:</dt>
-								<dd>
-									<ul>
-										<li>2-3</li>
-										<li>4-5</li>
-									</ul>
-								</dd>
-							</dl>
 						</div>
 						<div class="product-card__widget">
 							<strong class="product-card__subtitle">Product Specifications:</strong>
@@ -682,6 +647,36 @@
 								<dt>What’s Inside:</dt>
 								<dd>toy tablet, A3 batteries * 2 pcs</dd>
 							</dl>
+						</div>
+					</div>
+					<div class="product-card__content">
+						<div class="product-card__widget">
+							<div class="product-card__description text-slide-js">Welcome to a noisy farm! The cheerful farmer has so many different animals: a fluffy dog and a colourful rooster, a fast horse and a cute pig. It is so great to press the pictures with animals and listen to their voices! Pressing the mode buttons the little ones will listen to curious facts and play fun games. Listen to a merry tune and add animal voices to the mix! Это будет текстовое поле 1, отдельное заполняется для каждой игрушки ОК</div>
+							<!--<div class="product-card__description text-slide-js">Welcome to a noisy farm!</div>-->
+						</div>
+						<div class="product-card__widget">
+							<strong class="product-card__subtitle">Information:</strong>
+							<ul>
+								<li><span>10 animal voices</span></li>
+								<li><span>10 curious facts</span></li>
+								<li><span>20 fun questions</span></li>
+								<li><span>Amusing tune: the animals sing along!</span></li>
+							</ul>
+						</div>
+						<div class="product-card__widget">
+							<strong class="product-card__subtitle">Categories:</strong>
+							<ul>
+								<li>Educational Toy</li>
+								<li>Toy Table</li>
+								<li>Entertaining Musical Toy</li>
+							</ul>
+						</div>
+						<div class="product-card__widget">
+							<strong class="product-card__subtitle">Age:</strong>
+							<ul>
+								<li>2-3</li>
+								<li>4-5</li>
+							</ul>
 						</div>
 						<div class="product-card__widget">
 							<strong class="product-card__subtitle">Skills:</strong>
