--- a/products.html
+++ b/products.html
@@ -629,25 +629,6 @@
 							<img src="img/img-products-lg-02.jpg">
 							<img src="img/img-products-lg-03.jpg">
 						</div>
-						<div class="product-card__widget">
-							<strong class="product-card__subtitle">Product Specifications:</strong>
-							<dl class="product-card__dl">
-								<dt><b>Series:</b></dt>
-								<dd>KIDS’ PAD</dd>
-								<dt><b>Name:</b></dt>
-								<dd>Fun on the Farm</dd>
-								<dt>Item number:</dt>
-								<dd>INT-HX-015</dd>
-								<dt>Toy Dimensions:</dt>
-								<dd>241*185 mm</dd>
-								<dt>Package Dimensions:</dt>
-								<dd>35 x 320 x 232 mm</dd>
-								<dt>Language:</dt>
-								<dd>English</dd>
-								<dt>What’s Inside:</dt>
-								<dd>toy tablet, A3 batteries * 2 pcs</dd>
-							</dl>
-						</div>
 					</div>
 					<div class="product-card__content">
 						<div class="product-card__widget">
@@ -688,6 +669,27 @@
 							</ul>
 						</div>
 					</div>
+					<div class="product-card__spec">
+						<div class="product-card__widget">
+							<strong class="product-card__subtitle">Product Specifications:</strong>
+							<dl class="product-card__dl">
+								<dt><b>Series:</b></dt>
+								<dd>KIDS’ PAD</dd>
+								<dt><b>Name:</b></dt>
+								<dd>Fun on the Farm</dd>
+								<dt>Item number:</dt>
+								<dd>INT-HX-015</dd>
+								<dt>Toy Dimensions:</dt>
+								<dd>241*185 mm</dd>
+								<dt>Package Dimensions:</dt>
+								<dd>35 x 320 x 232 mm</dd>
+								<dt>Language:</dt>
+								<dd>English</dd>
+								<dt>What’s Inside:</dt>
+								<dd>toy tablet, A3 batteries * 2 pcs</dd>
+							</dl>
+						</div>
+					</div>
 				</div>
 			</div>
 			<!--popup footer-->
@@ -705,7 +707,8 @@
 								<a href="#" class="products__inner">
 									<div class="products__img"><div class="products__figure"><img src="img/img-products-01.jpg" alt="image description" /></div></div>
 									<div class="products__content">
-										<h3 class="products__title">Baby Player Fire Kids Edition Tablet</h3>
+										<h3 class="products__title">Baby Player</h3>
+										<h4 class="products__subtitle">Fire Kids Edition Tablet</h4>
 										<dl class="products__param">
 											<dt>Category:</dt> <dd>Educational Toys, Sound and Music Toys, Tablets with Touch Screen Pages</dd>
 											<dt>Skills:</dt> <dd>Cognitive skills, Hand-eye coordination, Sensory abilities, Reading skills</dd>
@@ -718,7 +721,8 @@
 								<a href="#" class="products__inner">
 									<div class="products__img"><div class="products__figure"><img src="img/img-video-01.jpg" alt="image description" /></div></div>
 									<div class="products__content">
-										<h3 class="products__title">Baby Player Ladybird</h3>
+										<h3 class="products__title">Baby Player</h3>
+										<h4 class="products__subtitle">Ladybird</h4>
 										<dl class="products__param">
 											<dt>Category:</dt> <dd>Learn</dd>
 											<dt>Skills:</dt> <dd>Memory</dd>
@@ -731,7 +735,8 @@
 								<a href="#" class="products__inner">
 									<div class="products__img"><div class="products__figure"><img src="img/img-expl-lg.jpg" alt="image description" /></div></div>
 									<div class="products__content">
-										<h3 class="products__title">Baby Player Ladybird for education</h3>
+										<h3 class="products__title">Baby Player</h3>
+										<h4 class="products__subtitle">Fire Kids Edition Tablet</h4>
 										<dl class="products__param">
 											<dt>Category:</dt> <dd>Microphones, Sound Mats, Sound Construction Models and Sets, Educational Cards, Puzzle Elements, Sticker Elements</dd>
 											<dt>Skills:</dt> <dd>Logical thinking skills, Social skills, Reading skills</dd>
@@ -744,7 +749,8 @@
 								<a href="#" class="products__inner">
 									<div class="products__img"><div class="products__figure"><img src="img/img-previews-04-test.jpg" alt="image description" /></div></div>
 									<div class="products__content">
-										<h3 class="products__title">Baby Player Ladybird for education your baby</h3>
+										<h3 class="products__title">Baby Player</h3>
+										<h4 class="products__subtitle">Ladybird</h4>
 										<dl class="products__param">
 											<dt>Category:</dt> <dd>Learn</dd>
 											<dt>Skills:</dt> <dd>Memory</dd>
@@ -757,7 +763,8 @@
 								<a href="#" class="products__inner">
 									<div class="products__img"><div class="products__figure"><img src="img/img-expl-sm.jpg" alt="image description" /></div></div>
 									<div class="products__content">
-										<h3 class="products__title">Baby Player Ladybird</h3>
+										<h3 class="products__title">Baby Player</h3>
+										<h4 class="products__subtitle">Fire Kids Edition Tablet</h4>
 										<dl class="products__param">
 											<dt>Category:</dt> <dd>Learn</dd>
 											<dt>Skills:</dt> <dd>Memory</dd>
@@ -770,7 +777,8 @@
 								<a href="#" class="products__inner">
 									<div class="products__img"><div class="products__figure"><img src="img/img-news-01.jpg" alt="image description" /></div></div>
 									<div class="products__content">
-										<h3 class="products__title">Baby Player Ladybird</h3>
+										<h3 class="products__title">Baby Player</h3>
+										<h4 class="products__subtitle">Ladybird</h4>
 										<dl class="products__param">
 											<dt>Category:</dt> <dd>Microphones, Sound Mats, Sound Construction Models and Sets, Educational Cards, Puzzle Elements, Sticker Elements</dd>
 											<dt>Skills:</dt> <dd>Logical thinking skills, Social skills, Reading skills</dd>
@@ -783,7 +791,8 @@
 								<a href="#" class="products__inner">
 									<div class="products__img"><div class="products__figure"><img src="img/img-products-01.jpg" alt="image description" /></div></div>
 									<div class="products__content">
-										<h3 class="products__title">Baby Player Fire Kids Edition Tablet</h3>
+										<h3 class="products__title">Baby Player</h3>
+										<h4 class="products__subtitle">Fire Kids Edition Tablet</h4>
 										<dl class="products__param">
 											<dt>Category:</dt> <dd>Microphones, Sound Mats, Sound Construction Models and Sets, Educational Cards, Puzzle Elements, Sticker Elements</dd>
 											<dt>Skills:</dt> <dd>Logical thinking skills, Social skills, Reading skills</dd>
@@ -796,7 +805,8 @@
 								<a href="#" class="products__inner">
 									<div class="products__img"><div class="products__figure"><img src="img/img-products-02.jpg" alt="image description" /></div></div>
 									<div class="products__content">
-										<h3 class="products__title">Baby Player Ladybird</h3>
+										<h3 class="products__title">Baby Player</h3>
+										<h4 class="products__subtitle">Ladybird</h4>
 										<dl class="products__param">
 											<dt>Category:</dt> <dd>Learn</dd>
 											<dt>Skills:</dt> <dd>Memory</dd>
@@ -809,7 +819,8 @@
 								<a href="#" class="products__inner">
 									<div class="products__img"><div class="products__figure"><img src="img/img-products-03.jpg" alt="image description" /></div></div>
 									<div class="products__content">
-										<h3 class="products__title">Baby Player Ladybird for education</h3>
+										<h3 class="products__title">Baby Player</h3>
+										<h4 class="products__subtitle">Fire Kids Edition Tablet</h4>
 										<dl class="products__param">
 											<dt>Category:</dt> <dd>Microphones, Sound Mats, Sound Construction Models and Sets, Educational Cards, Puzzle Elements, Sticker Elements</dd>
 											<dt>Skills:</dt> <dd>Logical thinking skills, Social skills, Reading skills</dd>
