--- a/products.html
+++ b/products.html
@@ -269,7 +269,7 @@
 			</div>
 			<div class="filters__group filters__search">
 				<div class="search-form filters-search-js">
-					<form action="#" method="get">
+					<div class="from">
 						<div class="input-wrap">
 							<input type="search" value="" placeholder="Search">
 							<div class="btn-search">
@@ -277,7 +277,7 @@
 								<!--<input type="submit" value="">-->
 							</div>
 						</div>
-					</form>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -304,7 +304,8 @@
 					<a href="#" class="products__inner popup-opener-js">
 						<div class="products__img"><div class="products__figure"><img src="img/img-products-01.jpg" alt="image description" /></div></div>
 						<div class="products__content">
-							<h3 class="products__title">Baby Player Fire Kids Edition Tablet</h3>
+							<h3 class="products__title">Baby Player</h3>
+							<h4 class="products__subtitle">Fire Kids Edition Tablet</h4>
 							<dl class="products__param">
 								<dt>Category:</dt> <dd>Educational Toys, Sound and Music Toys, Tablets with Touch Screen Pages</dd>
 								<dt>Skills:</dt> <dd>Cognitive skills, Hand-eye coordination, Sensory abilities, Reading skills</dd>
@@ -317,7 +318,8 @@
 					<a href="#" class="products__inner popup-opener-js">
 						<div class="products__img"><div class="products__figure"><img src="img/img-products-02.jpg" alt="image description" /></div></div>
 						<div class="products__content">
-							<h3 class="products__title">Baby Player Ladybird</h3>
+							<h3 class="products__title">Baby Player</h3>
+							<h4 class="products__subtitle">Ladybird</h4>
 							<dl class="products__param">
 								<dt>Category:</dt> <dd>Learn</dd>
 								<dt>Skills:</dt> <dd>Memory</dd>
@@ -330,7 +332,8 @@
 					<a href="#" class="products__inner popup-opener-js">
 						<div class="products__img"><div class="products__figure"><img src="img/img-products-03.jpg" alt="image description" /></div></div>
 						<div class="products__content">
-							<h3 class="products__title">Baby Player Ladybird for education</h3>
+							<h3 class="products__title">Baby Player</h3>
+							<h3 class="products__subtitle">Ladybird for education</h3>
 							<dl class="products__param">
 								<dt>Category:</dt> <dd>Microphones, Sound Mats, Sound Construction Models and Sets, Educational Cards, Puzzle Elements, Sticker Elements</dd>
 								<dt>Skills:</dt> <dd>Logical thinking skills, Social skills, Reading skills</dd>
@@ -343,7 +346,8 @@
 					<a href="#" class="products__inner popup-opener-js">
 						<div class="products__img"><div class="products__figure"><img src="img/img-products-04.jpg" alt="image description" /></div></div>
 						<div class="products__content">
-							<h3 class="products__title">Baby Player Ladybird for education your baby</h3>
+							<h3 class="products__title">Baby Player</h3>
+							<h4 class="products__subtitle">Ladybird for education your baby</h4>
 							<dl class="products__param">
 								<dt>Category:</dt> <dd>Learn</dd>
 								<dt>Skills:</dt> <dd>Memory</dd>
@@ -356,7 +360,8 @@
 					<a href="#" class="products__inner popup-opener-js">
 						<div class="products__img"><div class="products__figure"><img src="img/img-products-05.jpg" alt="image description" /></div></div>
 						<div class="products__content">
-							<h3 class="products__title">Baby Player Ladybird</h3>
+							<h3 class="products__title">Baby Player</h3>
+							<h3 class="products__subtitle">Ladybird</h3>
 							<dl class="products__param">
 								<dt>Category:</dt> <dd>Learn</dd>
 								<dt>Skills:</dt> <dd>Memory</dd>
@@ -369,7 +374,8 @@
 					<a href="#" class="products__inner popup-opener-js">
 						<div class="products__img"><div class="products__figure"><img src="img/img-products-06.jpg" alt="image description" /></div></div>
 						<div class="products__content">
-							<h3 class="products__title">Baby Player Ladybird</h3>
+							<h3 class="products__title">Baby</h3>
+							<h4 class="products__subtitle">Player Ladybird</h4>
 							<dl class="products__param">
 								<dt>Category:</dt> <dd>Microphones, Sound Mats, Sound Construction Models and Sets, Educational Cards, Puzzle Elements, Sticker Elements</dd>
 								<dt>Skills:</dt> <dd>Logical thinking skills, Social skills, Reading skills</dd>
