--- a/article.html
+++ b/article.html
@@ -288,6 +288,8 @@
 					<p>Liz De La Torre, 30, a Clinton delegate from St. Paul, Minnesota, started her GoFundMe campaign at the advice of friends shortly after she won her spot on the delegation at a statewide convention in early June. But once she saw how many other delegates had already started passing the hat online, she decided to add a traditional fund-raising element to her campaign: homemade tamales for those who donated.</p>
 					<p>De La Torre said she sold more than 800 tamales and met her goal of $1,600 within three weeks.</p>
 					<p>"Making tamales is expensive and it's time consuming," De La Torre said, adding that about three-quarters of her donors made contributions without placing a tamale order. "And it was hot in my kitchen. It was hell on Earth."</p>
+					<a href="https://play.google.com/store/apps/details?id=com.azbooks.meekamoo.eng.free">google play link</a> <br>
+					<a href="https://itunes.apple.com/us/app/meek-a-moo-learn-play/id590346633?mt=8">App Store link</a> <br>
 					<!--more-->
 					<div class="more">
 						<h2>More:</h2>
