--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 				<div class="tabs-panel" id="tabs-section-01">
 					<div class="products__list">
 						<div class="products__item">
-							<a href="#" class="products__inner">
+							<a href="products/prod-card.html" class="products__inner">
 								<div class="products__img"><div class="products__figure"><img src="img/img-products-01.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player</h3>
