--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 
 <!--screen-->
 <div class="color-tape-horizontal"></div>
-<div class="screen">
+<!--<div class="screen">
 	<div class="screen__bg"></div>
 	<strong class="screen__logo">AZToys</strong>
 	<strong class="screen__title">Interactive toys inspiring fun learning!</strong>
-</div>
+</div>-->
 <!--screen end-->
 
 <!--HEADER-->
