--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 					</a>
 					<!--slogan end-->
 					<!--phone-->
-					<div class="phone"><a href="mailto:info@az-toys.com">info@az-toys.com</a></div>
+					<div class="phone"><a href="http://azbooks.com/" target="_blank">azbooks.com</a></div>
 					<!--phone end-->
 					<!--social networks-->
 					<ul class="social-networks">
