--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
 					<li><a href="about.html"><span>About Us</span></a></li>
 					<li><a href="apps.html"><span>Apps</span></a></li>
 					<li><a href="news.html"><span>News</span></a></li>
+					<li><a href="news.html"><span>Video</span></a></li>
 					<li><a href="contacts.html"><span>Contacts</span></a></li>
 				</ul>
 			</nav>
@@ -842,6 +843,7 @@
 					<li><a href="products.html"><span>Products</span></a></li>
 					<li><a href="apps.html"><span>Apps</span></a></li>
 					<li><a href="news.html"><span>News</span></a></li>
+					<li><a href="contacts.html"><span>Video</span></a></li>
 					<li><a href="contacts.html"><span>Contacts</span></a></li>
 				</ul>
 			</div>
